--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,6 +1,9 @@
 * {
   font-family: verdana, sans-serif;
 }
+body {
+  background-color: black;
+}
 header {
   text-align: center;
 }
@@ -13,3 +16,33 @@ h1 {
   color: aquamarine;
   font-size: 16px;
 }
+.secondary-heading{
+  color: #ffffff ;
+  font-weight: 300;
+  font-size: 42px;
+}
+.minor-secondary-heading {
+font-size: 21px;
+color: gray;
+}
+.center {
+  text-align: center;
+}
+.last-div {
+  margin-top: 20px;
+}
+footer p {
+  color: gray;
+  text-align: right;
+  font-size: 20px;
+}
+
+
+
+
+
+
+
+
+
+
